[package]
name = "nuclino-rs"
version = "0.1.0"
edition = "2021"
authors = ["C J Silverio <ceejceej@gmail.com>"]
license = "Parity-7.0.0"
readme = "README.md"
repository = "https://github.com/ceejbot/nuclino-rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
thiserror = "1.0.61"
ureq = { version = "2.9.7", features = ["json"] }
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["serde"] }

[dev-dependencies]
dotenvy = "0.15.7"
owo-colors = "4.0.0"
